codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__copy_code_selection_popup.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Copy code block


› 1. rust code  fn first() {}
  2. text code  second block

  enter select · esc back
