codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: active_blob(&chat)
---
• Ran ls -la
  └ (no output)
• Ran cat foo.txt
  └ hello from foo
• Ran sed -n 100,200p foo.txt
  └ chunk
• Ran cat bar.txt
  └ hello from bar
