codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__local_auto_model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model
  Pick a quick auto mode or browse all models.


  1. Auto                  Route each new turn with your local Ollama classifier
› 2. All models (current)  Choose a specific model and reasoning level (current:
                           gpt-5.2)

  enter select · esc back
