codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_non_empty_then_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 1309
expression: combined
---
↳ Interacted with background terminal · just fix
  └ pwd

• Waited for background terminal just fix

  Worked for [duration] • [completion time]
